--- a/interface.css
+++ b/interface.css
@@ -3,8 +3,8 @@ body {
 	top: 0;
 	left: 0;
 	position: absolute;
-	width: 700px;
-	height: 700px;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: fantasy;
@@ -59,7 +59,7 @@ canvas {
 	position: absolute;
 	left: 20%;
 	width: 60%;
-	height: 400px;
+	height: 60%;
 	top: 150px;
 }
 .scoreLine {
@@ -86,8 +86,9 @@ canvas {
 }
 .btn-group {
 	position: absolute;
-	width: 100%;
-	top: 600px;
+	width: 60%;
+	left: 20%;
+	top: 80%;
 	align-self: auto;
 	display: flex;
 }
